fix(Header): fix header overflow on super small devices

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -132,7 +132,7 @@
     border: 0;
     border-radius: 0;
     margin: 0;
-    padding: 33px;
+    padding: 33px 0;
 
     &:focus,
     &:hover,
